--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-aiogram == 3.22.0
-python-dotenv == 1.1.1
+aiogram==3.22.0
+aiohttp==3.12.15
+environs==14.3.0
+pydantic==2.11.7
+magic-filter==1.0.12
+aiofiles==24.1.0
