Обновлена точка входа, config/config.py и handlers/user.py

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 BOT_TOKEN="Вставьте сюда токена вашео бота"
+
+LOG_LEVEL=DEBUG
+LOG_FORMAT='[{asctime}] #{levelname:8} {filename}:{lineno} - {name} - {message}'
