--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
+# Bot
 BOT_TOKEN="Вставьте сюда токена вашео бота"
 
+# Logging
 LOG_LEVEL=DEBUG
 LOG_FORMAT='[{asctime}] #{levelname:8} {filename}:{lineno} - {name} - {message}'
+
+# PostgreSQL
+POSTGRES_DB=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
