--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ aiosqlite==0.21.0
 APScheduler==3.11.0
 psycopg-binary==3.2.10
 asyncpg==0.30.0
+psycopg2==2.9.10
 SQLAlchemy==2.0.43
+alembic==1.16.5
