Исправлена функция старта планировщика (utils\scheduler.py\start_scheduler) | Исправляется ошибка с добавлением канала в список каналов пользователя

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ BOT_TOKEN="Вставьте сюда токена вашео бота"
 # Logging
 LOG_LEVEL=DEBUG
 LOG_FORMAT='[{asctime}] #{levelname:8} {filename}:{lineno} - {name} - {message}'
+LOG_FILENAME="logs.log"
+LOG_FILEMODE="w"
+LOG_ENCODING="utf-8"
 
 # PostgreSQL
 POSTGRES_DB=postgres
