--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,33 @@
-# Bot
-BOT_TOKEN="Вставьте сюда токена вашео бота"
+# ==========================================
+# 🤖 TELEGRAM BOT SETTINGS
+# ==========================================
+# Токен вашего Telegram-бота от @BotFather
+BOT_TOKEN=your_telegram_bot_token_here
 
-# Logging
+
+# ==========================================
+# 🧾 LOGGING SETTINGS
+# ==========================================
+# Уровни: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=DEBUG
+
+# Формат вывода логов (поддерживает {asctime}, {levelname}, {filename}, {lineno}, {message})
 LOG_FORMAT='[{asctime}] #{levelname:8} {filename}:{lineno} - {name} - {message}'
+
+# Имя файла логов
 LOG_FILENAME="logs.log"
+
+# Режим записи: a (добавлять в конец) или w (перезаписывать)
 LOG_FILEMODE="w"
+
+# Кодировка файла логов
 LOG_ENCODING="utf-8"
 
-# PostgreSQL
-POSTGRES_DB=postgres
+
+# ==========================================
+# 🐘 POSTGRESQL DATABASE SETTINGS
+# ==========================================
+POSTGRES_DB=autopostbot
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
