--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,30 @@
 # ==========================================
 # 🤖 TELEGRAM BOT SETTINGS
 # ==========================================
-# Токен вашего Telegram-бота от @BotFather
+# Токен вашего Telegram-бота, полученный у @BotFather
 BOT_TOKEN=your_telegram_bot_token_here
 
 
 # ==========================================
 # 🧾 LOGGING SETTINGS
 # ==========================================
-# Уровни: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Возможные уровни: DEBUG | INFO | WARNING | ERROR | CRITICAL
 LOG_LEVEL=DEBUG
 
-# Формат вывода логов (поддерживает {asctime}, {levelname}, {filename}, {lineno}, {message})
-LOG_FORMAT='[{asctime}] #{levelname:8} {filename}:{lineno} - {name} - {message}'
+# Формат вывода логов (использует стиль форматирования "str.format")
+# Поддерживаемые параметры: {asctime}, {levelname}, {filename}, {lineno}, {name}, {message}
+LOG_FORMAT=[{asctime}] {levelname:8} {filename}:{lineno} - {name} - {message}
 
-# Имя файла логов
-LOG_FILENAME="logs.log"
+# Имя файла, в который записываются логи
+LOG_FILENAME=logs.log
 
-# Режим записи: a (добавлять в конец) или w (перезаписывать)
-LOG_FILEMODE="w"
+# Режим записи:
+#   a — добавлять новые записи в конец файла
+#   w — перезаписывать файл при каждом запуске
+LOG_FILEMODE=w
 
 # Кодировка файла логов
-LOG_ENCODING="utf-8"
+LOG_ENCODING=utf-8
 
 
 # ==========================================
@@ -32,3 +35,13 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+
+
+# ==========================================
+# ⚙️ OPTIONAL SETTINGS
+# ==========================================
+# Значение True/False. Если True — планировщик активируется при запуске.
+ENABLE_SCHEDULER=True
+
+# Если нужно запускать бота в тестовом режиме (без отправки реальных сообщений)
+DEBUG_MODE=False
